--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 106
-</p><p class="card-text">Number of spectra: 8925
-</p><p class="card-text">Last update: 2024-03-03, 15:08</p>
+<p class="card-text">Number of stars: 107
+</p><p class="card-text">Number of spectra: 8941
+</p><p class="card-text">Last update: 2024-03-03, 16:18</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -206,10 +206,10 @@
       <td><a href="as289.html">AS 289</a></td>
       <td>18 12 22.14</td>
       <td>-11 40 07.12</td>
-      <td>4</td>
+      <td>5</td>
       <td>2012-06-26</td>
-      <td>2021-09-02</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-09-02 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2023-07-05</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-07-05 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>4</td>
       <td>4</td>
@@ -410,10 +410,10 @@
       <td><a href="hen2-468.html">Hen 2-468</a></td>
       <td>20 41 18.99</td>
       <td>+34 44 52.33</td>
-      <td>2</td>
+      <td>3</td>
       <td>2019-07-01</td>
-      <td>2019-07-11</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2019-07-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2023-07-11</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-07-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>4</td>
       <td>4</td>
@@ -986,7 +986,7 @@
       <td><a href="zand.html">Z And</a></td>
       <td>23 33 39.96</td>
       <td>+48 49 05.97</td>
-      <td>344</td>
+      <td>347</td>
       <td>2010-10-30</td>
       <td>2024-01-18</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-01-18 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -1046,10 +1046,10 @@
       <td><a href="as327.html">AS 327</a></td>
       <td>18 53 16.66</td>
       <td>-24 22 58.80</td>
-      <td>5</td>
+      <td>6</td>
       <td>2020-05-24</td>
-      <td>2021-05-15</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-05-15 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2023-05-18</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-05-18 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
       <td>1</td>
@@ -1070,7 +1070,7 @@
       <td><a href="hksco.html">HK Sco</a></td>
       <td>16 54 41.03</td>
       <td>-30 23 06.88</td>
-      <td>5</td>
+      <td>6</td>
       <td>2020-05-27</td>
       <td>2023-04-20</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-04-20 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -1154,10 +1154,10 @@
       <td><a href="wray15-1470.html">WRAY 15-1470</a></td>
       <td>16 23 21.64</td>
       <td>-27 40 10.32</td>
-      <td>4</td>
+      <td>11</td>
       <td>2020-05-25</td>
-      <td>2021-05-14</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-05-14 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2023-07-04</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-07-04 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
       <td>1</td>
@@ -1398,6 +1398,18 @@
       <td>2020-07-23</td>
       <td>2023-07-08</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-07-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>3</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td><a href="wray15-157.html">WRAY 15-157</a></td>
+      <td>08 06 34.87</td>
+      <td>-28 32 01.22</td>
+      <td>2</td>
+      <td>2023-03-25</td>
+      <td>2023-04-14</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-04-14 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>3</td>
       <td>2</td>
