--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 		 <a href="symbiotics.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Symbiotic Stars</a><br><br>
 		  <a href="novae.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Novae</a><br><br>
 		  <a href="dwarf_novae.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Dwarf Novae</a><br><br>
+      <a href="transcient_Vel2025.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Miscellanous</a><br><br>
 <!--		 <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Nova-like Variables</a><br><br>
 	    <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Supernovae</a><br><br>-->
 <!--
