--- a/novae.html
+++ b/novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://asd.gsfc.nasa.gov/Koji.Mukai/novae/novae.html">Koji's List of Recent Galactic Novae</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 71
-</p><p class="card-text">Number of spectra: 4497
-</p><p class="card-text">Last update: 2025-06-26, 12:17</p>
+<p class="card-text">Number of stars: 72
+</p><p class="card-text">Number of spectra: 4500
+</p><p class="card-text">Last update: 2025-06-27, 10:01</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -890,9 +890,20 @@
       <td>15 08 03.27</td>
       <td>-40 08 29.58</td>
       <td></td>
-      <td>ASASSN-25cm</td>
+      <td>ASASSN-25cm0</td>
       <td>33</td>
       <td>2025-06-17</td>
+      <td>2025-06-26</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-06-26 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="pnvvel2025.html">PNV Vel 2025</a></td>
+      <td>10 25 12.00</td>
+      <td>-53 31 10.9</td>
+      <td>V0XXX Vel</td>
+      <td>PNV J10251200-5331109</td>
+      <td>3</td>
+      <td>2025-06-26</td>
       <td>2025-06-26</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-06-26 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
