--- a/novae.html
+++ b/novae.html
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 72
 </p><p class="card-text">Number of spectra: 4503
-</p><p class="card-text">Last update: 2025-06-27, 10:19</p>
+</p><p class="card-text">Last update: 2025-06-27, 10:33</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -890,7 +890,7 @@
       <td>15 08 03.27</td>
       <td>-40 08 29.58</td>
       <td></td>
-      <td>ASASSN-25cm0</td>
+      <td>ASASSN-25cm</td>
       <td>33</td>
       <td>2025-06-17</td>
       <td>2025-06-26</td>
