--- a/novae.html
+++ b/novae.html
@@ -70,8 +70,8 @@
  <p class="card-text">Details on stars:   <a href="http://asd.gsfc.nasa.gov/Koji.Mukai/novae/novae.html">Koji's List of Recent Galactic Novae</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 72
-</p><p class="card-text">Number of spectra: 4564
-</p><p class="card-text">Last update: 2025-07-13, 09:25</p>
+</p><p class="card-text">Number of spectra: 4568
+</p><p class="card-text">Last update: 2025-07-13, 17:07</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -889,12 +889,12 @@
       <td><a href="novalup2025.html">Nova Lup 2025</a></td>
       <td>15 08 03.27</td>
       <td>-40 08 29.58</td>
-      <td></td>
+      <td>V462 Lup</td>
       <td>ASASSN-25cm</td>
-      <td>65</td>
+      <td>67</td>
       <td>2025-06-17</td>
-      <td>2025-07-12</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-07-12 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2025-07-13</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-07-13 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
       <td><a href="pnvvel2025.html">PNV Vel 2025</a></td>
@@ -902,10 +902,10 @@
       <td>-53 31 10.9</td>
       <td>V572 Vel</td>
       <td>PNV J10251200-5331109</td>
-      <td>35</td>
+      <td>37</td>
       <td>2025-06-26</td>
-      <td>2025-07-10</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-07-10 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2025-07-13</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-07-13 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
