--- a/novasco2025.html
+++ b/novasco2025.html
@@ -66,11 +66,10 @@
   <div class="card">
     <div class="card-body">
       <h5 class="card-title">Nova Sco 2025</h5>
+      <p class="card-text">GCVS Name:V462 Sco </p>
       <p class="card-text">RA (2000): 17 59 04.39</p>
   <p class="card-text">DEC (2000):  -36 01 11.1</p>
   <p class="card-text">V (mag): MagnitudeV</p>
-  <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/Nom1/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
-      <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=Nom2&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
 </div><div class="col-sm-6">
