--- a/novae.html
+++ b/novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://asd.gsfc.nasa.gov/Koji.Mukai/novae/novae.html">Koji's List of Recent Galactic Novae</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 72
-</p><p class="card-text">Number of spectra: 4590
-</p><p class="card-text">Last update: 2025-07-20, 16:41</p>
+<p class="card-text">Number of stars: 73
+</p><p class="card-text">Number of spectra: 4591
+</p><p class="card-text">Last update: 2025-07-21, 08:41</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -901,11 +901,22 @@
       <td>10 25 12.00</td>
       <td>-53 31 10.9</td>
       <td>V572 Vel</td>
-      <td>PNV J10251200-5331109</td>
+      <td>PNV J10251200-53311090</td>
       <td>46</td>
       <td>2025-06-26</td>
       <td>2025-07-19</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-07-19 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="novaser2025.html">Nova Ser 2025</a></td>
+      <td>18 38 58.47</td>
+      <td>-03 51 49.4</td>
+      <td>V0XXX Ser</td>
+      <td>TCP J18385851-0351482</td>
+      <td>1</td>
+      <td>2025-07-20</td>
+      <td>2025-07-20</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-07-20 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
